Register page in progress

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
   --softBg: #f0f0f0;
   --softTextColor: #626262;
   --primary-color: #7f2eaf;
-  /* --bg: #0f172a;
+  /* --bg: #2f3d5d;
   --textColor: #ddd;
   --softBg: #1f273a;
   --softTextColor: #a6a6a6; */
