--- a/src/component/navbar/Navbar.module.css
+++ b/src/component/navbar/Navbar.module.css
@@ -1,12 +1,10 @@
 .container {
   display: flex;
   justify-content: space-between;
-  background-color: var(--bg);
   padding: 1rem 0;
+  margin-bottom: 1rem;
 }
 
 .logo {
   font-size: 3rem;
-  color: var(--primary-color);
-  padding-left: 2rem;
 }
