--- a/src/component/headSection/headSection.module.css
+++ b/src/component/headSection/headSection.module.css
@@ -28,3 +28,13 @@
   top: 1rem;
   font-size: 1.2rem;
 }
+
+
+
+@media screen and (max-width: 1024px) {
+  .container{
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+  }
+}
