--- a/src/component/heroSection/herosection.module.css
+++ b/src/component/heroSection/herosection.module.css
@@ -4,10 +4,21 @@
 }
 
 .content {
+  flex: 1;
   display: flex;
   gap: 1rem;
   flex-direction: column;
   justify-content: center;
+}
+
+.image{
+  flex: 1;
+}
+
+.image > img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .content h1 {
@@ -32,4 +43,11 @@
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
+}
+
+
+@media screen and (max-width: 768px) {
+  .image {
+    display: none;
+  }
 }
