--- a/src/component/login/loginform.module.css
+++ b/src/component/login/loginform.module.css
@@ -55,3 +55,18 @@
   cursor: pointer;
   text-decoration: underline;
 }
+
+
+@media screen and (max-width: 1366px) {
+  .container {
+    flex-direction: column;
+    background: none;
+  }
+  
+}
+
+@media screen and (max-width: 1024px) {
+  .wrapper {
+    width: 80vw;
+  }
+}
