--- a/src/component/student/student.module.css
+++ b/src/component/student/student.module.css
@@ -4,3 +4,18 @@
   grid-template-columns: repeat(4, 1fr);
   transition: all 500ms ease;
 }
+
+
+@media screen and (max-width: 1024px) {
+  .container{
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 15rem;
+  }
+}
+
+
+@media screen and (max-width: 728px) {
+  .container{
+    grid-template-columns: 1fr;
+  }
+}
